# VR-teleop-piper

./: .gitignore  README.md  __init__.py  controller_stream.py  data.md  environment.yml  output.jsonl  pyproject.toml  record.md  requirements.txt  telemetry_left.jsonl
configs/: piper.json  piper_recording.json  piper_recording_dual.json  piper_side15.json  piper_teleop.json  piper_teleop_ceiling.json  piper_teleop_ceiling_dual.json  piper_teleop_dual.json  piper_teleop_left.json  piper_teleop_no_constraints.json  run_vr_meshcat.json  run_vr_meshcat_side30.json
data_ui/: __init__.py  app.py  ui.py  worker.py
docs/: function_reference.md  real_robot_adaptation.md  teleop_kinematics.md  vr_teleop_architecture.md
lerobot/scripts/: control_robot.py
output/: telemetry.jsonl
piper_description/urdf/: piper_description.urdf
robot/: __init__.py  constraints.py  ik.py
robot/ik/: __init__.py  base_solver.py  meshcat_solver.py
scripts/: merge_datasets.py  piper_pipeline.py  plot_telemetry.py  postprocess_encode_videos.py  preview_mount_pose.py  qt_recorder.py  record_vr_trajectory.py  replay_mit_from_telemetry.py  run_vr_meshcat.py  run_vr_piper.py  teleop_common.py
tests/: test_incremental_mapper.py  test_trajectory_utils.py
vr_runtime/: __init__.py  binary_protocol.py  controller_pipeline.py  controller_state.py  shm_ring.py  webrtc_endpoint.py
vr_teleop_piper/: __init__.py
vr_teleop_piper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
web-ui/: binary_protocol.js  index.html  interface.js  styles.css  vr_app.js
(+37 files in other folders)
